# dynamics-w90

./: .configure-custom.sh  .gitignore  CMakeLists.txt  ConfigCache_gnu_openblas.txt  README.md  configure  matplotlibrc  project.md
ConfigExamples/: ConfigCache_gnu_openblas.txt  ConfigCache_intel.txt
data/WS2_nosoc/: ws2_bands.gnu
data/WS2_soc/: ws2_bands.gnu
examples/: ws2_oam.py  ws2_oam_txt.py  wse2_nosoc_bands.py  wse2_nosoc_bands_txt.py  wse2_nosoc_oam.py  wse2_soc_bands.py  wse2_soc_bands_txt.py
inp/: ws2_soc_pp.inp  wse2_nosoc_pp.inp  wse2_nosoc_pulse.inp  wse2_soc_pp.inp  wse2_soc_prune.inp
python_utils/: PlotBands.py  SOCInput.py  SOCInput_txt.py  gen_pulse.py  plot_obs_txt.py  read_wann_calc.py  read_wann_calc_txt.py  wann_evol.py
scitools/: CMakeLists.txt
scitools/basic/: CMakeLists.txt  array1d_dist.F90  binutils.f90  debug.F90  def.f90  hdf5_utils.f90  linalg.f90  sorting.f90  time.f90  utils.F90
scitools/math/: CMakeLists.txt  bicgstab.F90  bsplines.f90  cg_solver.f90  filon.F90  fornberg.f90  gausslegendre.F90  gmresm.f90  gregory.f90  idrs.f90  lebedev_quad.F90  lebedev_weights.F90  legendre.f90  matrixexp.F90  quadpack.f90  quadrature.F90  root.f90  rungekutta.f90  special.F90  vector_bsplines.F90
scitools/math/lebedev/: lebedev_17_inc.f90  lebedev_19_inc.f90  lebedev_21_inc.f90  lebedev_29_inc.f90  lebedev_31_inc.f90  lebedev_35_inc.f90  lebedev_3_inc.f90  lebedev_41_inc.f90  lebedev_53_inc.f90  lebedev_5_inc.f90  lebedev_65_inc.f90  lebedev_9_inc.f90
scitools/phys/: CMakeLists.txt  evol.F90  laserpulse.F90
src/: CMakeLists.txt  formats.h  units_inc.f90
src/basic/: CMakeLists.txt  Mdebug.F90
src/evol/: CMakeLists.txt  Mevol.F90  Mlaserpulse.F90  Mmatrixexp.F90
src/iotools/: CMakeLists.txt  Mio_hamiltonian.F90  Mio_obs.F90  Mio_orbitals.F90  Mio_params.F90  io_density.F90  io_hamiltonian.F90  io_obs.F90  io_orbitals.F90  io_params.F90
src/math/: CMakeLists.txt  Mbsplines.f90  Mgausslegendre.F90  Mintegration.f90  Mlebedev_quad.F90  Mlebedev_weights.F90  Mquadpack.f90  Mquadrature.F90  Mroot.f90  Mrungekutta.f90  Mspecial.F90  Mvector_bsplines.F90
src/math/lebedev/: lebedev_11_inc.f90  lebedev_13_inc.f90  lebedev_15_inc.f90  lebedev_23_inc.f90  lebedev_25_inc.f90  lebedev_27_inc.f90  lebedev_47_inc.f90  lebedev_59_inc.f90  lebedev_7_inc.f90
src/pes/: CMakeLists.txt  COUL90.f  Mangcoeff.F90  Matomic.F90  Mmatrix_elements.F90  Mpes_intensity.F90  Mradialintegral.F90  Mradialwf.F90  Mscattwf.F90  Mwignerd.f90  gamma_function.f90  pes_angcoeff.F90  pes_atomic.F90  pes_main.F90  pes_matel.F90  pes_matrix_elements.F90  pes_radialintegral.F90  pes_radialwf.F90  pes_scatt_input.F90  pes_scattwf.F90  pes_wignerd.f90
src/programs/: CMakeLists.txt  Marpes_calc.F90  Marpes_calc_mpi.F90  Mlatt_wann.F90  Mlatt_wann_mpi.F90  Mwann_evol.F90  Mwann_evol_mpi.F90  Mwannier_calc.F90  arpes.F90  arpes_mpi.F90  latt_wann.F90  latt_wann_mpi.F90  test_fftw_mpi.F90  test_spfft.F90  test_spfft_mpi.F90  wann_calc.F90  wann_evol.F90  wann_evol_mpi.F90  wann_prune.F90  wann_scissor.F90  wann_soc.F90
src/tools/: CMakeLists.txt  Marray1d_dist.F90  Mdebug.F90  Mdef.f90  Mgrid1d.f90  Mhdf5_utils.f90  Mlinalg.f90  Mmesh.f90  Msorting.f90  Mtime.f90  Munits.f90  Mutils.F90  Mutils.f90
src/wannier/: CMakeLists.txt  Mham_w90.F90  Mham_w90.f90  Mlatt.f90  Mlatt_kpts.F90  Mlatt_utils.f90  Mread_xyz.F90  Mslab_calc.F90  Mwann_compress.F90  Mwann_compress.f90  Mwann_dyn.F90  Mwann_dyn.f90  Mwann_slab.F90  Mwann_soc.F90  Mwannier_calc.F90  Mwannier_orbitals.F90  Mwannier_soc.F90  fftw_distributed_inc.F90  fftw_inc.F90  fftw_mpi_inc.F90  spfft_inc.F90  spfft_mpi_inc.F90  wan_compress.F90  wan_dyn.F90  wan_dynamics.F90  wan_equilibrium.F90  wan_fft_ham.F90  wan_fft_ham_mpi.F90  wan_fft_observables.F90  wan_fft_observables_mpi.F90  wan_fft_propagation.F90  wan_fft_propagation_mpi.F90  wan_fftw_ham_inc.F90  wan_fftw_ham_mpi_inc.F90  wan_fourier.F90  wan_hamiltonian.F90  wan_latt_kpts.F90  wan_latt_utils.f90  wan_orbitals.F90  wan_overlap.F90  (+11 more)
test_arpes/: geometry_tools.py  kgrid.py  orbitals_cplx.h5  orbitals_real.h5  path_MKGKM.inp  plot_bands.py  plot_spectrum.py  plot_spectrum_iso.py  wannier_orbitals.py  wse2_11bnd_proj.xyz  wse2_arpes.py  wse2_arpes_iso.py  wse2_arpes_iso_mpi.py  wse2_arpes_trdad.py  wse2_prep_orbitals.py
test_arpes/inp/: wse2_arpes_path_polp.inp
